QItemSelectionModel: Sort persistent model indexes taking parent into account.

When sorting a tree model with large sub-trees and and a large
selection, the existing sort function would mix indexes of
different parents, causing a fragmented selection,
which slows down painting.

Task-number: QTBUG-33954
Change-Id: Ia585fc1e5de9a1a3f6124a58c9c7c40fcbdbfb6a
Reviewed-by: Olivier Goffart <ogoffart@woboq.com>

cregit: 9c774b7621fdc99c03fad1b424b09b82057dc748 https://github.com/qt/qtbase/commit/9c774b7621fdc99c03fad1b424b09b82057dc748